html: fix broken link and modify hover effect

--- a/_static/css/pydata-overrides.css
+++ b/_static/css/pydata-overrides.css
@@ -106,9 +106,10 @@ tbody tr:nth-child(even) { background-color: var(--table-bg-color-even); }
 }
 
 .grid-item-card:hover {
-  border: 1px solid var(--pst-color-primary); /* Light grey background on hover */
-  cursor: pointer; /* Change cursor to indicate clickable */
-  /* Add more styles as desired */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Example shadow effect */
+  transform: scale(1.05); /* Slightly scale up */
+  transition: transform 0.2s, box-shadow 0.2s;
+  border: var(--pst-color-primary); /* Smooth transition */
 }
 
 
