attempt to center imgs on page

--- a/_static/css/pydata-overrides.css
+++ b/_static/css/pydata-overrides.css
@@ -57,6 +57,13 @@ p {
   line-height: 1.5;
 }
 
+/* Target all <img> tags within <p> tags */
+p > img {
+  display: block;
+  margin: auto;
+}
+
+
 a.headerlink {
   color: var(--pst-color-primary)
 }
